Bug 612150 - Eliminating JS_GetFunctionName. r=mrbkap