js/src/jsprobes.cpp
@@ -82,7 +82,7 @@ Probes::FunctionLineNumber(JSContext *cx, const JSFunction *fun)
  *
  *      jsval      returned
  *      -------------------
- *      STRING  -> char *
+ *      STRING  -> void *
  *      INT     -> int
  *      DOUBLE  -> double *
  *      BOOLEAN -> int
@@ -108,9 +108,6 @@ jsprobes_jsvaltovoid(JSContext *cx, const js::Value &argval)
 
     if (argval.isBoolean())
         return (void *)argval.toBoolean();
-
-    if (argval.isString())
-        return (void *)js_GetStringBytes(cx, argval.toString());
 
     if (argval.isNumber()) {
         if (argval.isInt32())
